test/sema/negative/no_ret1.impala
fn f(r: fn(int)) {
    let x: int = r(4);
    x
}
