test/sema/negative/no_ret1.output
no_ret1.impala:2 col 18 - 21: error: wrong  type; expected 'i32' but found '<no-return>'
